--- a/menu.html
+++ b/menu.html
@@ -201,39 +201,53 @@
         </div>
         <div class="piatto"><img class="immagine-piatto" src="./Assets/Images/orzo.jpg"><div class="nome-prezzo"> <div class="nome-piatto">ORZO</div><div class="prezzo">€2,50</div></div>
         </div>
-        <div class="piatto"><img class="immagine-piatto" src="./Assets/Images/acqua.png"><div class="nome-prezzo"> <div class="nome-piatto">ACQUA MINERALE SPAREA (Piemonte)</div><div class="prezzo">€2,50</div></div>
+        <div class="piatto"><img class="immagine-piatto" style="object-fit:contain;" src="./Assets/Images/acqua.png"><div class="nome-prezzo"> <div class="nome-piatto">ACQUA MINERALE SPAREA (Piemonte)</div><div class="prezzo">€2,50</div></div>
           <div class="descrizione" data-translate="Still/Sparkling 0,75 cl." data-translateIt="Naturale/Frizzante 0,75 cl."></div>
         </div>
-        <div class="piatto"><img class="immagine-piatto" src="./Assets/Images/bibite.png"><div class="nome-prezzo"> <div class="nome-piatto">COCA COLA, COCA ZERO, FANTA, SPRITE</div><div class="prezzo">€3,00</div></div>
+        <div class="piatto"><img class="immagine-piatto" style="object-fit:contain;" src="./Assets/Images/bibite.png"><div class="nome-prezzo"> <div class="nome-piatto">COCA COLA, COCA ZERO, FANTA, SPRITE</div><div class="prezzo">€3,00</div></div>
           <div class="descrizione" data-translate="Glass bottle 0,33 cl." data-translateIt="Vetro 0,33 cl."></div>
         </div>
       </div>
 
-      <div class="titolo-menu-ovale" style="width: 20vh;" data-translate="BEERS" data-translateIt="Birre"></div>
+      <div class="titolo-menu-ovale" style="width: 15vh;" data-translate="Beers" data-translateIt="Birre"></div>
       <div class="riga-piatti">
-        <div class="piatto"><img class="immagine-piatto" src="./Assets/Images/pastiera.webp"><div class="nome-prezzo"> <div class="nome-piatto">DOLOMITI PILS</div><div class="prezzo">(0,20cl) €3,50 / (0,40cl) €5,50</div></div>
-        <div class="descrizione" data-translate="shortcrust pastry, cooked wheat, buffalo ricotta, wildflower flavouring" data-translateIt="pastafrolla, grano cotto, ricotta di bufala, aroma millefiori"></div>
+        <div class="piatto"><img class="immagine-piatto" style="object-fit:contain;" src="./Assets/Images/dolomitipils.png"><div class="nome-prezzo"> <div class="nome-piatto">DOLOMITI PILS</div><div class="prezzo">(0,20cl) €3,50 / (0,40cl) €5,50</div></div>
+        <div class="descrizione" data-translate="full flavor with floral notes 4.9% vol." data-translateIt="gusto pieno con note floreali 4,9% vol."></div>
         </div>
-        <div class="piatto"><img class="immagine-piatto" src="./Assets/Images/baba.avif"><div class="nome-prezzo"> <div class="nome-piatto">DOLOMITI ROSSA</div><div class="prezzo">(0,20cl) €4,50 / (0,40cl) €6,50</div></div>
-          <div class="descrizione" data-translate="soft leavened dough with alcoholic syrup" data-translateIt="impasto soffice lievitato con bagna alcolica"></div>
+        <div class="piatto"><img class="immagine-piatto" style="object-fit:contain;" src="./Assets/Images/dolomitirossa.png"><div class="nome-prezzo"> <div class="nome-piatto">DOLOMITI ROSSA</div><div class="prezzo">(0,20cl) €4,50 / (0,40cl) €6,50</div></div>
+          <div class="descrizione" data-translate="Structured and balanced taste with hints of caramel and berries 6.7% vol." data-translateIt="Gusto struttuturato ed equilibrato con sentori di caramello e frutti di bosco 6,7% vol."></div>
         </div>
-        <div class="piatto"><img class="immagine-piatto" src="./Assets/Images/cheesecake.jpg"><div class="nome-prezzo"> <div class="nome-piatto">DOLOMITI NON FILTRATA</div><div class="prezzo">(0,20cl) €4,00 / (0,40cl) €6,00</div></div>
-          <div class="descrizione" data-translate="Buffalo ricotta mousse on butter biscuit filled with: berries or salted caramel or pistachio or chocolate" data-translateIt="mousse alla ricotta di bufala su biscotto al burro farcita: frutti di bosco o caramello salato o pistacchio o cioccolato"></div>
+        <div class="piatto"><img class="immagine-piatto" style="object-fit:contain;" src="./Assets/Images/dolomitinfiltrata.jpg"><div class="nome-prezzo"> <div class="nome-piatto">DOLOMITI NON FILTRATA</div><div class="prezzo">(0,20cl) €4,00 / (0,40cl) €6,00</div></div>
+          <div class="descrizione" data-translate="unfiltered lager with a rounded taste and fruity notes 5.8% vol" data-translateIt="lager non filtrata dal gusto rotondo con note fruttate 5,8% vol"></div>
         </div>
-        <div class="piatto"><img class="immagine-piatto" src="./Assets/Images/graffe.jpg"><div class="nome-prezzo"> <div class="nome-piatto">SUPERIOR ITALIAN PALE LAGER</div><div class="prezzo">(0,20cl) €4,00 / (0,40cl) €6,00</div></div>
-          <div class="descrizione" data-translate="freshly fried donut covered in sugar filled: Nutella or pistachio" data-translateIt="ciambella fritta al momento ricoperta di zucchero farcita: nutella o pistacchio"></div>
+        <div class="piatto"><img class="immagine-piatto" style="object-fit:contain;" src="./Assets/Images/superior.png"><div class="nome-prezzo"> <div class="nome-piatto">SUPERIOR ITALIAN PALE LAGER</div><div class="prezzo">(0,20cl) €4,00 / (0,40cl) €6,00</div></div>
+          <div class="descrizione" data-translate="100% Italian low fermentation characterized by a bitter and dry taste 5% vol." data-translateIt="100% italiana a bassa fermentazioni caratterizzata da un gusto amaro e secco 5% vol."></div>
         </div>
       </div>
       <div class="riga-piatti">
-        <div class="piatto"><img class="immagine-piatto" src="./Assets/Images/pastiera.webp"><div class="nome-prezzo"> <div class="nome-piatto">DOLOMITI SUPERIOR</div><div class="prezzo">(0,33) €4,50</div></div>
-        <div class="descrizione" data-translate="shortcrust pastry, cooked wheat, buffalo ricotta, wildflower flavouring" data-translateIt="pastafrolla, grano cotto, ricotta di bufala, aroma millefiori"></div>
+        <div class="piatto"><img class="immagine-piatto" style="object-fit:contain;" src="./Assets/Images/analcolica.png"><div class="nome-prezzo"> <div class="nome-piatto">DOLOMITI SUPERIOR</div><div class="prezzo">(0,33cl) €4,50</div></div>
+        <div class="descrizione" data-translate="non alcoholic beer" data-translateIt="birra analcolica"></div>
         </div>
         <div class="piatto"></div>
         <div class="piatto"></div>
         <div class="piatto"></div>
       </div>
+
+      <div class="titolo-menu-ovale" data-translate="Distillates" data-translateIt="Distillati"></div>
+      <div class="riga-piatti">
+        <div class="piatto"><img class="immagine-piatto" src="./Assets/Images/grappa.jpg"><div class="nome-prezzo"> <div class="nome-piatto">GRAPPA CHIARA</div><div class="prezzo">€3,50</div></div>
+        </div>
+        <div class="piatto"><img class="immagine-piatto" src="./Assets/Images/grappascura.jpg"><div class="nome-prezzo"> <div class="nome-piatto">GRAPPA SCURA</div><div class="prezzo">€4,00</div></div>
+        </div>
+        <div class="piatto"><img class="immagine-piatto" src="./Assets/Images/limoncello.jpg"><div class="nome-prezzo"> <div class="nome-piatto">LIMONCELLO/LIQUIRIZIA</div><div class="prezzo">€3,00</div></div>
+        </div>
+        <div class="piatto"><img class="immagine-piatto" style="object-fit:contain;" src="./Assets/Images/amaro.webp"><div class="nome-prezzo"> <div class="nome-piatto">AMARO</div><div class="prezzo">€3,50</div></div>
+        </div>
+      </div>
+
+      <div style="height: 10vh;"></div>
     </div>
-    
+
     <footer>
       <div class="informative">
         <a href="https://www.iubenda.com/privacy-policy/23582678" class="iubenda-black iubenda-noiframe iubenda-embed iubenda-noiframe " title="Privacy Policy ">Privacy Policy</a><script type="text/javascript">(function (w,d) {var loader = function () {var s = d.createElement("script"), tag = d.getElementsByTagName("script")[0]; s.src="https://cdn.iubenda.com/iubenda.js"; tag.parentNode.insertBefore(s,tag);}; if(w.addEventListener){w.addEventListener("load", loader, false);}else if(w.attachEvent){w.attachEvent("onload", loader);}else{w.onload = loader;}})(window, document);</script>
