--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@
     <div class="container-immagine">
         <div class="text-image">SPAN</div>
         <div data-translate="Welcome to" data-translateIt="Benvenuto da"  class="sottotitolo-home"></div>
+        <div class="subtitle">Società Pizzaioli Anonimi Napoletani</div>
         <div class="sottotitolo-ovale-home"></div>
         <div class="sottotitolo-subtext"> 
             <img class="freccia" src="./Assets/Images/freccia.png"> 
@@ -51,7 +52,14 @@
         <img class="immagine-home" src="./Assets/Images/home.jpg">
     </div>
   </div>
+  <section>
 
+
+
+
+
+
+  </section>
     <footer>
       <div class="informative">
         <a href="https://www.iubenda.com/privacy-policy/23582678" class="iubenda-black iubenda-noiframe iubenda-embed iubenda-noiframe " title="Privacy Policy ">Privacy Policy</a><script type="text/javascript">(function (w,d) {var loader = function () {var s = d.createElement("script"), tag = d.getElementsByTagName("script")[0]; s.src="https://cdn.iubenda.com/iubenda.js"; tag.parentNode.insertBefore(s,tag);}; if(w.addEventListener){w.addEventListener("load", loader, false);}else if(w.attachEvent){w.attachEvent("onload", loader);}else{w.onload = loader;}})(window, document);</script>
