--- a/index.html
+++ b/index.html
@@ -52,14 +52,56 @@
         <img class="immagine-home" src="./Assets/Images/home.jpg">
     </div>
   </div>
-  <section>
+  <div class="menu-sec">
+    <div class="men-texts">
+        <div>Menù</div>
+        <div class="sottotitolo-ovale-home"></div>
+        <div data-translate="Our exquisite range of dishes features carefully selected recipes that capture the authentic
+        taste of Neapolitan pizza. From classic options to unique ingredient combinations, our
+        menu will satisfy every taste and offer an unforgettable gastronomic journey." data-translateIt="La nostra squisita gamma di piatti presenta ricette accuratamente selezionate che catturano l'autenticità
+        gusto della pizza napoletana. Dalle opzioni classiche alle combinazioni di ingredienti uniche, il nostro
+        il menu soddisferà tutti i gusti e offrirà un viaggio gastronomico indimenticabile." class="men-subtext"></div>
+        <div class="spacer"></div>
+        <div class="pizza">
+            <div class="pizza-img">
+
+            </div>
+            <div class="pizza-name"></div>
+        </div>
+        <div class="pizza">
+            <div class="pizza-img">
+
+            </div>
+            <div class="pizza-name"></div>
+        </div>
+        <div class="pizza">
+            <div class="pizza-img">
+
+            </div>
+            <div class="pizza-name"></div>
+        </div>
+        <div class="pizza">
+            <div class="pizza-img">
+
+            </div>
+            <div class="pizza-name"></div>
+        </div>
+    </div>
+
+  </div>
+  <div class="about-sec">
 
 
+  </div>
+  <div class="gallery-sec">
 
 
+  </div>
+  <div class="contact-sec">
 
 
-  </section>
+  </div>
+
     <footer>
       <div class="informative">
         <a href="https://www.iubenda.com/privacy-policy/23582678" class="iubenda-black iubenda-noiframe iubenda-embed iubenda-noiframe " title="Privacy Policy ">Privacy Policy</a><script type="text/javascript">(function (w,d) {var loader = function () {var s = d.createElement("script"), tag = d.getElementsByTagName("script")[0]; s.src="https://cdn.iubenda.com/iubenda.js"; tag.parentNode.insertBefore(s,tag);}; if(w.addEventListener){w.addEventListener("load", loader, false);}else if(w.attachEvent){w.attachEvent("onload", loader);}else{w.onload = loader;}})(window, document);</script>
