--- a/index.html
+++ b/index.html
@@ -54,13 +54,14 @@
   </div>
   <div class="menu-sec">
     <div class="men-texts">
-        <div>Menù</div>
-        <div class="sottotitolo-ovale-home"></div>
+        <div class="men-title">Menù</div>
+        <div class="men-ovale"></div>
         <div data-translate="Our exquisite range of dishes features carefully selected recipes that capture the authentic
         taste of Neapolitan pizza. From classic options to unique ingredient combinations, our
         menu will satisfy every taste and offer an unforgettable gastronomic journey." data-translateIt="La nostra squisita gamma di piatti presenta ricette accuratamente selezionate che catturano l'autenticità
         gusto della pizza napoletana. Dalle opzioni classiche alle combinazioni di ingredienti uniche, il nostro
         il menu soddisferà tutti i gusti e offrirà un viaggio gastronomico indimenticabile." class="men-subtext"></div>
+    </div>
         <div class="spacer"></div>
         <div class="pizza">
             <div class="pizza-img">
@@ -86,8 +87,9 @@
             </div>
             <div class="pizza-name"></div>
         </div>
-    </div>
-
+        <div class="btn">
+            <a href="./menu.html" data-translate="See Menu" data-translateIt="Vai al menù"></a>
+        </div>
   </div>
   <div class="about-sec">
 
