--- a/menu.html
+++ b/menu.html
@@ -145,13 +145,13 @@
         </div>
       </div>
       <div class="riga-piatti">
-        <div class="piatto"><img class="immagine-piatto" src="./Assets/Images/brusco.png"><div class="nome-prezzo"> <div class="nome-piatto">BRUSCO</div><div class="prezzo">€14,00</div></div>
+        <div class="piatto"><img class="immagine-piatto" src="./Assets/Images/brusco.jpg"><div class="nome-prezzo"> <div class="nome-piatto">BRUSCO</div><div class="prezzo">€14,00</div></div>
         <div class="descrizione" data-translate="buffalo mozzarella, out of the oven: cooked Capitelli shoulder, grilled artichokes, flakes of Tuscan pecorino with juniper, extra virgin olive oil and basil" data-translateIt="mozzarella di bufala, fuori forno: spalla cotta Capitelli, carciofi grigliati, scaglie di pecorino toscano al ginepro, olio evo e basilico"></div>
         </div>
         <div class="piatto"><img class="immagine-piatto" src="./Assets/Images/zucca.png"><div class="nome-prezzo"> <div class="nome-piatto">ZUCCA</div><div class="prezzo">€12,00</div></div>
           <div class="descrizione" data-translate="fior di latte, pumpkin cream, buffalo blue, 3-cooked Capitelli bacon, extra virgin olive oil and basil" data-translateIt="fior di latte, crema di zucca,blu di bufala, pancetta Capitelli a 3 cotture, olio evo e basilico"></div>
         </div>
-        <div class="piatto"><img class="immagine-piatto" src="./Assets/Images/mortadella.png"><div class="nome-prezzo"> <div class="nome-piatto">MORTADELLA</div><div class="prezzo">€14,00</div></div>
+        <div class="piatto"><img class="immagine-piatto" src="./Assets/Images/mortadella.jpg"><div class="nome-prezzo"> <div class="nome-piatto">MORTADELLA</div><div class="prezzo">€14,00</div></div>
           <div class="descrizione" data-translate="fior di latte, out of the oven: mortadella, potato croquettes, Apulian burratina 125g, pistachio cream" data-translateIt="fior di latte, fuori forno: mortadella, crocchè di patate, burratina pugliese 125 gr, crema di pistacchi"></div>
         </div>
         <div class="piatto"><img class="immagine-piatto" src="./Assets/Images/ragu.png"><div class="nome-prezzo"> <div class="nome-piatto">RAGU</div><div class="prezzo">€12,00</div></div>
