--- a/index.html
+++ b/index.html
@@ -53,9 +53,12 @@
     </div>
   </div>
   <div class="menu-sec">
+    <div class="menu-subsec">
     <div class="men-texts">
+      <div class="men-logo">
         <div class="men-title">Menù</div>
         <div class="men-ovale"></div>
+      </div>
         <div data-translate="Our exquisite range of dishes features carefully selected recipes that capture the authentic
         taste of Neapolitan pizza. From classic options to unique ingredient combinations, our
         menu will satisfy every taste and offer an unforgettable gastronomic journey." data-translateIt="La nostra squisita gamma di piatti presenta ricette accuratamente selezionate che catturano l'autenticità
@@ -63,34 +66,37 @@
         il menu soddisferà tutti i gusti e offrirà un viaggio gastronomico indimenticabile." class="men-subtext"></div>
     </div>
         <div class="spacer"></div>
+      <div class="pizzas">
         <div class="pizza">
             <div class="pizza-img">
-
+              <img src="./Assets/Images/fiocco.png" alt="">
             </div>
-            <div class="pizza-name"></div>
-        </div>
-        <div class="pizza">
-            <div class="pizza-img">
-
-            </div>
-            <div class="pizza-name"></div>
+            <div class="pizza-name">FIOCCO</div>
         </div>
         <div class="pizza">
             <div class="pizza-img">
-
+              <img src="./Assets/Images/dypolla.png" alt="">
             </div>
-            <div class="pizza-name"></div>
+            <div class="pizza-name">DYPOLLA</div>
         </div>
         <div class="pizza">
             <div class="pizza-img">
-
+              <img src="./Assets/Images/mastoantonio.png" alt="">
             </div>
-            <div class="pizza-name"></div>
+            <div class="pizza-name">MASTOANTONIO</div>
         </div>
-        <div class="btn">
-            <a href="./menu.html" data-translate="See Menu" data-translateIt="Vai al menù"></a>
+        <div class="pizza">
+            <div class="pizza-img">
+              <img src="./Assets/Images/brusco.png" alt="">
+            </div>
+            <div class="pizza-name">BRUSCO</div>
         </div>
+      </div>
+      <div class="btn">
+        <a href="./menu.html" data-translate="SEE MENU" data-translateIt="VAI AL MENU'"></a>
+    </div>
   </div>
+</div>
   <div class="about-sec">
 
 
