--- a/index.html
+++ b/index.html
@@ -87,14 +87,16 @@
         </div>
         <div class="pizza">
             <div class="pizza-img">
-              <img src="./Assets/Images/brusco.png" alt="">
+              <img src="./Assets/Images/brusco.jpg" alt="">
             </div>
             <div class="pizza-name">BRUSCO</div>
         </div>
       </div>
+      <div class="btn-cont">
       <div class="btn">
         <a href="./menu.html" data-translate="SEE MENU" data-translateIt="VAI AL MENU'"></a>
     </div>
+  </div>
   </div>
 </div>
   <div class="about-sec">
