--- a/menu.html
+++ b/menu.html
@@ -22,10 +22,10 @@
         
         <div class="nav-bar">
             <ul>
-                <a class="elemento-lista" href="">Home<a>
+                <a class="elemento-lista" href="./index.html">Home<a>
                         <a data-translate="Menù" data-translateIt="Menù" class="elemento-lista" style ="color: #5C6B5F;" href="./menu.html"></a>
-                                <a data-translate="About Us" data-translateIt="La nostra storia" class="elemento-lista" href=""></a>
-                                        <a data-translate="Gallery" data-translateIt="Gallery" class="elemento-lista" href=""></a>
+                                <a data-translate="About Us" data-translateIt="La nostra storia" class="elemento-lista" href="./about.html"></a>
+                                        <a data-translate="Gallery" data-translateIt="Gallery" class="elemento-lista" href="./gallery.html"></a>
                                                 <a data-translate="Contact Us" data-translateIt="Contatti" class="elemento-lista" href="./contact.html"></a>
             </ul>
         </div>
