--- a/index.html
+++ b/index.html
@@ -92,11 +92,7 @@
             <div class="pizza-name">BRUSCO</div>
         </div>
       </div>
-<<<<<<< Updated upstream
-      <div class="btn-cont">
-=======
       <div class="btn-container">
->>>>>>> Stashed changes
       <div class="btn">
         <a href="./menu.html" data-translate="SEE MENU" data-translateIt="VAI AL MENU'"></a>
     </div>
@@ -104,8 +100,21 @@
   </div>
 </div>
   <div class="about-sec">
+    <div class="ab-start">
+      <div class="ab-textlogo">
+        <div class="ab-text" data-translate="About Us" data-translateIt="La nostra storia"></div>
+        <div class="ab-ovale"></div>
+      </div>
+      <div class="ab-subtext" data-translate="SPAN is not just a pizzeria, it is a story of passion and dedication to tradition." data-translateIt="SPAN non è solo una pizzeria, è una storia di passione e dedizione alla tradizione."></div>
+    </div>
+    <div class="ab-image"><img src="./Assets/Images/mortadella.jpg" alt=""></div>
+    <div class="ab-end">
+      <div class="ab-textlogo-end">
+        <div class="ab-ovale-end"></div>
 
-
+      </div>
+      <div class="ab-subtext-end"></div>
+    </div>
   </div>
   <div class="gallery-sec">
 
