--- a/about.html
+++ b/about.html
@@ -41,14 +41,14 @@
 
       <div class="about-sec-first"> 
         <div class="about-first-subsec">
-            <div class="start-comma" data-translate="‛‛" data-translateIt="‛‛"></div>
-            <div class="about-first-title" data-translate="SPAN IS NOT JUST A PIZZERIA, IT IS A REAL
-            FAMILY UNITED BY A COMMON PASSION
-            FOR THE ART OF PIZZA." data-translateIt="SPAN NON È SOLO UNA PIZZERIA, È UNA VERA PIZZERIA
-            FAMIGLIA UNITA DA UNA PASSIONE COMUNE
+            <div class="start-comma" data-translate="“" data-translateIt="“"></div>
+            <div class="about-first-title" data-translate="<b>SPAN</b> IS NOT JUST A PIZZERIA, IT IS A <b>REAL</b>
+            <b>FAMILY</b> UNITED BY A COMMON PASSION
+            FOR THE ART OF PIZZA." data-translateIt="<b>SPAN</b> NON È SOLO UNA PIZZERIA, È UNA <b>VERA</b>
+            <b>FAMIGLIA</b> UNITA DA UNA PASSIONE COMUNE
             PER L'ARTE DELLA PIZZA."></div>
-            <div class="end-comma" data-translate="‚‚" data-translateIt="‚‚"></div>
-            <div class="about-first-subtitile" data-translate="Our team of pizzaiolos proudly conveys the traditions of Neapolitan
+            <div class="end-comma" data-translate="”" data-translateIt="”"></div>
+            <div class="about-first-subtitle" data-translate="Our team of pizzaiolos proudly conveys the traditions of Neapolitan
             cuisine, preserving its authentic flavors and unique recipes. We invite
             you to become part of our history and enjoy the unique taste of SPAN!" data-translateIt="Il nostro team di pizzaioli trasmette con orgoglio le tradizioni della cucina napoletana
             cucina, preservandone i sapori autentici e le ricette uniche. Invitiamo
@@ -56,7 +56,22 @@
         </div>
       </div>
       <div class="about-sec-second">
-    
+        <div class="about-second-subsec">
+            <div class="about-photo1">
+
+            </div>
+            <div class="about-photo23">
+                <div class="about-photo2">
+
+                </div>
+                <div class="about-photo3">
+
+                </div>
+            </div>
+            <div class="about-photo3">
+
+            </div>
+        </div>
       </div>
       <div class="about-sec-third">
     
