--- a/about.html
+++ b/about.html
@@ -58,26 +58,59 @@
       <div class="about-sec-second">
         <div class="about-second-subsec">
             <div class="about-photo1">
-
+              <img src="./Assets/Images/zuccaa.jpg" alt="">
             </div>
             <div class="about-photo23">
                 <div class="about-photo2">
-
+                    <img src="./Assets/Images/bruno.jpg" alt="">
                 </div>
                 <div class="about-photo3">
-
+                  <img src="./Assets/Images/nba.jpg" alt="">
                 </div>
             </div>
-            <div class="about-photo3">
-
+            <div class="about-photo4">
+              <img src="./Assets/Images/team.jpg" alt="">
             </div>
         </div>
       </div>
       <div class="about-sec-third">
-    
+        <div class="about-subsec-third">
+          <div class="about-textlogotexts">
+            <div class="about-textlogo">
+              <div class="ovale-textlogo"></div>
+              <div class="sottotitolo-textlogo" data-translate="Approach" data-translateIt="Avvicinati"></div>
+            </div>
+            <div class="about-texts" data-translate="Our dishes are real art. We are committed to quality and freshness, using
+            only the finest ingredients and carefully crafting each recipe. Every bite is
+            the result of our passion and dedication to the culinary arts." data-translateIt="I nostri piatti sono vera arte. Ci impegniamo per la qualità e la freschezza, utilizzando
+            solo gli ingredienti migliori e la realizzazione attenta di ogni ricetta. Ogni boccone lo è
+            il risultato della nostra passione e dedizione per l'arte culinaria."></div>
+          </div>
+          <div class="about-textlogotexts">
+            <div class="about-textlogo">
+              <div class="ovale-textlogo"></div>
+              <div class="sottotitolo-textlogo" data-translate="Atmosphere" data-translateIt="Atmosfera"></div>
+            </div>
+            <div class="about-texts" data-translate="SPAN is a place where you can enjoy not only great food, but also a warm
+            atmosphere and friendly service. We strive to create a cozy space for our
+            guests where they can enjoy communication with friends and family,
+            immersing themselves in the world of taste and SPAN hospitality." data-translateIt="SPAN è un luogo dove potrete gustare non solo ottimo cibo, ma anche un'atmosfera calda
+            atmosfera e servizio cordiale. Ci sforziamo di creare uno spazio accogliente per il nostro
+            ospiti dove possono comunicare con amici e familiari,
+            immergendosi nel mondo del gusto e dell'ospitalità SPAN."></div>
+          </div>
+
+        </div>
       </div>
       <div class="about-sec-fourth">
-    
+        <div class="about-subsec-texts">
+          <div class="about-subsec-texts-sub">
+            <div class="about-" data-translate="WELCOME TO OUR PIZZERIA, WHERE EVERY GUEST IS PART OF OUR BIG FAMILY!" data-translateIt="BENVENUTO NELLA NOSTRA PIZZERIA, DOVE OGNI L'OSPITE FA PARTE DELLA NOSTRA GRANDE FAMIGLIA!"></div>
+            <div class="spacer-fourth"></div>
+            <div class="about-first-subtitle"></div>
+          </div>
+        </div>
+        <div class="about-subsec-image"><img src="./Assets/Images/Laurabassi1.jpg" alt=""></div>
       </div>
 
 
