--- a/about.html
+++ b/about.html
@@ -105,9 +105,9 @@
       <div class="about-sec-fourth">
         <div class="about-subsec-texts">
           <div class="about-subsec-texts-sub">
-            <div class="about-" data-translate="WELCOME TO OUR PIZZERIA, WHERE EVERY GUEST IS PART OF OUR BIG FAMILY!" data-translateIt="BENVENUTO NELLA NOSTRA PIZZERIA, DOVE OGNI L'OSPITE FA PARTE DELLA NOSTRA GRANDE FAMIGLIA!"></div>
+            <div class="about-subsec-text-fourth" data-translate="WELCOME TO OUR PIZZERIA, WHERE EVERY GUEST IS PART OF OUR BIG FAMILY!" data-translateIt="BENVENUTO NELLA NOSTRA PIZZERIA, DOVE OGNI L'OSPITE FA PARTE DELLA NOSTRA GRANDE FAMIGLIA!"></div>
             <div class="spacer-fourth"></div>
-            <div class="about-first-subtitle"></div>
+            <div class="about-subsec-subtext-fourth" data-translate="We are proud of our history and appreciate every guest who chooses us. We strive to make your visit to SPAN unforgettable and leave you with only the most pleasant memories." data-translateIt="Siamo orgogliosi della nostra storia e apprezziamo ogni ospite che ci sceglie. Ci sforziamo di fare la tua visita per SPAN indimenticabile e lasciarti solo con il ricordi più piacevoli."></div>
           </div>
         </div>
         <div class="about-subsec-image"><img src="./Assets/Images/Laurabassi1.jpg" alt=""></div>
