--- a/index.html
+++ b/index.html
@@ -124,8 +124,7 @@
           <div class="gallery-ovale"></div>
         </div>
         <div class="gallery-subtexts" data-translate="Let's experience the atmosphere of SPAN
-        together through our gallery." data-translateIt="Viviamo l'atmosfera di SPAN
-        insieme attraverso la nostra gallery.">
+        together through our gallery." data-translateIt="Viviamo l'atmosfera di SPAN insieme attraverso la nostra gallery.">
           
         </div>
         <div class="gallery-btn">
