--- a/gallery.html
+++ b/gallery.html
@@ -58,11 +58,14 @@
           <img src="./Assets/Images/cucina3.jpg" alt="Immagine 5">
           <img src="./Assets/Images/cucina5.jpg" alt="Immagine 6">
           <img src="./Assets/Images/cucina4.jpg" alt="Immagine 7">
-      
         </div>
         <div class="sidebar" id="sidebarRight" style="justify-content: left; align-items: center;"></div>
       </div>
       
+      <div class="navigation" id="navigation"></div>
+
+      <div class="titolo-menu-ovale" style="font-size: 10vh; text-align: center; padding-bottom: 4vh; width: 20vh;" data-translate="Guests" data-translateIt="Ospiti"></div>
+
       <footer>
         <div class="informative">
           <a href="https://www.iubenda.com/privacy-policy/23582678" class="iubenda-black iubenda-noiframe iubenda-embed iubenda-noiframe " title="Privacy Policy ">Privacy Policy</a><script type="text/javascript">(function (w,d) {var loader = function () {var s = d.createElement("script"), tag = d.getElementsByTagName("script")[0]; s.src="https://cdn.iubenda.com/iubenda.js"; tag.parentNode.insertBefore(s,tag);}; if(w.addEventListener){w.addEventListener("load", loader, false);}else if(w.attachEvent){w.attachEvent("onload", loader);}else{w.onload = loader;}})(window, document);</script>
