--- a/prova.html
+++ b/prova.html
@@ -1,128 +1,228 @@
 <!DOCTYPE html>
 <html lang="it">
+
 <head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Carousel con immagini</title>
-<style>
-  body {
-    margin: 0;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    height: 100vh;
-  }
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Carousel con immagini</title>
+  <style>
+    body {
+      margin: 0;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      height: 100vh;
+    }
 
-  .container {
-    display: flex;
-    flex-direction: row;
-    width: 100%;
-  }
+    .container {
+      display: flex;
+      width: 100%;
+      justify-content: center;
+      margin-bottom: 20px;
+    }
 
-  .sidebar {
-    width: 33.3%;
-    display: flex;
-  }
+    .sidebar {
+      width: 33.3%;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+    }
 
-  .sidebar img {
-    width: 35vh; /* Aumenta la dimensione dell'immagine */
-    height: 35vh; /* Aumenta la dimensione dell'immagine */
-    opacity: 0.8; /* Opacità predefinita */
-  }
+    .sidebar img {
+      max-width: 150px;
+      max-height: 150px;
+      opacity: 0.8;
+    }
 
-  .carousel {
-    width: 33.3%;
-    overflow: hidden;
-    position: relative;
-  }
+    .carousel {
+      width: 33.3%;
+      overflow: hidden;
+      position: relative;
+    }
 
-  .carousel img {
-    width: 100%;
-    height: auto;
-  }
+    .carousel img {
+      width: 100%;
+      height: auto;
+    }
 
-  .controls {
-    position: absolute;
-    top: 50%;
-    transform: translateY(-50%);
-    width: 100%;
-    display: flex;
-    justify-content: space-between;
-    z-index: 1;
-  }
+    .controls {
+      position: absolute;
+      top: 50%;
+      transform: translateY(-50%);
+      width: 100%;
+      display: flex;
+      justify-content: space-between;
+      z-index: 1;
+    }
 
-  .controls button {
-    color: white;
-    background-color: black;
-    border: 1px solid black;
-    border-radius: 100%;
-    cursor: pointer;
-    font-size: 2vh;
-  }
-</style>
+    .controls button {
+      color: white;
+      background-color: black;
+      border: 1px solid black;
+      border-radius: 100%;
+      cursor: pointer;
+      font-size: 2vh;
+    }
+
+    .navigation {
+      display: flex;
+      justify-content: center;
+    }
+
+    .bar {
+      width: 20px;
+      height: 4px;
+      margin: 0 5px;
+      background-color: gray;
+      transition: background-color 0.3s ease;
+    }
+
+    .active {
+      background-color: blue;
+    }
+
+    .active.double {
+      width: 40px;
+      /* Doppia larghezza */
+    }
+  </style>
 </head>
+
 <body>
-<div class="container">
-  <div class="sidebar" id="sidebarLeft" style="justify-content: right; align-items: center;"></div>
-  <div class="carousel">
-    <div class="controls">
-      <button onclick="prevImage()">&#10094;</button>
-      <button onclick="nextImage()">&#10095;</button>
+  <div class="container">
+    <div class="sidebar" id="sidebarLeft1" style="justify-content: right;"></div>
+    <div class="carousel" id="carousel1">
+      <div class="controls">
+        <button onclick="prevImage(1)">&#10094;</button>
+        <button onclick="nextImage(1)">&#10095;</button>
+      </div>
+      <img src="./Assets/Images/cucina1.jpg" alt="Immagine 1">
+      <img src="./Assets/Images/cucina7.jpg" alt="Immagine 2">
+      <img src="./Assets/Images/cucina2.jpg" alt="Immagine 3">
+      <img src="./Assets/Images/cucina6.jpg" alt="Immagine 4">
+      <img src="./Assets/Images/cucina3.jpg" alt="Immagine 5">
+      <img src="./Assets/Images/cucina5.jpg" alt="Immagine 6">
+      <img src="./Assets/Images/cucina4.jpg" alt="Immagine 7">
     </div>
-    <img src="./Assets/Images/cucina1.jpg" alt="Immagine 1">
-    <img src="./Assets/Images/cucina7.jpg" alt="Immagine 2">
-    <img src="./Assets/Images/cucina2.jpg" alt="Immagine 3">
-    <img src="./Assets/Images/cucina6.jpg" alt="Immagine 4">
-    <img src="./Assets/Images/cucina3.jpg" alt="Immagine 5">
-    <img src="./Assets/Images/cucina5.jpg" alt="Immagine 6">
-    <img src="./Assets/Images/cucina4.jpg" alt="Immagine 7">
-
+    <div class="sidebar" id="sidebarRight1" style="justify-content: left;"></div>
   </div>
-  <div class="sidebar" id="sidebarRight" style="justify-content: left; align-items: center;"></div>
-</div>
 
-<script>
-  const images = document.querySelectorAll('.carousel img');
-  let currentIndex = 0;
+  <div class="navigation" id="navigation1"></div>
 
-  function showImage(index) {
-    images.forEach((image, i) => {
-      if (i === index) {
-        image.style.display = 'block';
-      } else {
-        image.style.display = 'none';
+  <div class="container">
+    <div class="sidebar" id="sidebarLeft2" style="justify-content: right;"></div>
+    <div class="carousel" id="carousel2">
+      <div class="controls">
+        <button onclick="prevImage(2)">&#10094;</button>
+        <button onclick="nextImage(2)">&#10095;</button>
+      </div>
+      <img src="./Assets/Images/cucina1.jpg" alt="Immagine 8">
+      <img src="./Assets/Images/cucina7.jpg" alt="Immagine 9">
+      <img src="./Assets/Images/cucina2.jpg" alt="Immagine 10">
+      <img src="./Assets/Images/cucina6.jpg" alt="Immagine 11">
+      <img src="./Assets/Images/cucina3.jpg" alt="Immagine 12">
+      <img src="./Assets/Images/cucina5.jpg" alt="Immagine 13">
+      <img src="./Assets/Images/cucina4.jpg" alt="Immagine 14">
+    </div>
+    <div class="sidebar" id="sidebarRight2" style="justify-content: left;"></div>
+  </div>
+
+  <div class="navigation" id="navigation2"></div>
+
+  <div class="container">
+    <div class="sidebar" id="sidebarLeft3" style="justify-content: right;"></div>
+    <div class="carousel" id="carousel3">
+      <div class="controls">
+        <button onclick="prevImage(3)">&#10094;</button>
+        <button onclick="nextImage(3)">&#10095;</button>
+      </div>
+      <img src="./Assets/Images/cucina1.jpg" alt="Immagine 15">
+      <img src="./Assets/Images/cucina7.jpg" alt="Immagine 16">
+      <img src="./Assets/Images/cucina2.jpg" alt="Immagine 17">
+      <img src="./Assets/Images/cucina6.jpg" alt="Immagine 18">
+      <img src="./Assets/Images/cucina3.jpg" alt="Immagine 19">
+      <img src="./Assets/Images/cucina5.jpg" alt="Immagine 20">
+      <img src="./Assets/Images/cucina4.jpg" alt="Immagine 21">
+    </div>
+    <div class="sidebar" id="sidebarRight3" style="justify-content: left;"></div>
+  </div>
+
+  <div class="navigation" id="navigation3"></div>
+
+  <script>
+    function createCarousel(images, carouselId, navigationId, sidebarLeftId, sidebarRightId) {
+      const carousel = document.getElementById(carouselId);
+      const navigation = document.getElementById(navigationId);
+      const sidebarLeft = document.getElementById(sidebarLeftId);
+      const sidebarRight = document.getElementById(sidebarRightId);
+      let currentIndex = 0;
+
+      function showImage(index) {
+        images.forEach((image, i) => {
+          if (i === index) {
+            image.style.display = 'block';
+          } else {
+            image.style.display = 'none';
+          }
+        });
+        currentIndex = index;
+        updateSidebarImages();
+        updateNavigation();
       }
-    });
-    currentIndex = index;
-    updateSidebarImages();
-  }
 
-  function nextImage() {
-    currentIndex = (currentIndex + 1) % images.length;
-    showImage(currentIndex);
-  }
+      function nextImage(id) {
+        const carouselId = 'carousel' + id;
+        const images = document.querySelectorAll('#' + carouselId + ' img');
+        currentIndex = (currentIndex + 1) % images.length;
+        showImage(currentIndex);
+      }
 
-  function prevImage() {
-    currentIndex = (currentIndex - 1 + images.length) % images.length;
-    showImage(currentIndex);
-  }
+      function prevImage(id) {
+        const carouselId = 'carousel' + id;
+        const images = document.querySelectorAll('#' + carouselId + ' img');
+        currentIndex = (currentIndex - 1 + images.length) % images.length;
+        showImage(currentIndex);
+      }
 
-  function updateSidebarImages() {
-    const sidebarLeft = document.getElementById('sidebarLeft');
-    const sidebarRight = document.getElementById('sidebarRight');
-    const leftIndex = (currentIndex - 1 + images.length) % images.length;
-    const rightIndex = (currentIndex + 1) % images.length;
+      function updateSidebarImages() {
+        const leftIndex = (currentIndex - 1 + images.length) % images.length;
+        const rightIndex = (currentIndex + 1) % images.length;
 
-    sidebarLeft.innerHTML = `<img src="${images[leftIndex].src}" alt="Immagine ${leftIndex + 1}">`;
-    sidebarRight.innerHTML = `<img src="${images[rightIndex].src}" alt="Immagine ${rightIndex + 1}">`;
+        sidebarLeft.innerHTML = `<img src="${images[leftIndex].src}" alt="Immagine ${leftIndex + 1}">`;
+        sidebarRight.innerHTML = `<img src="${images[rightIndex].src}" alt="Immagine ${rightIndex + 1}">`;
 
-    // Aggiorna stile immagini nei div laterali
-    sidebarLeft.querySelector('img').style.opacity = '0.5';
-    sidebarRight.querySelector('img').style.opacity = '0.5';
-  }
+        sidebarLeft.querySelector('img').style.opacity = '0.5';
+        sidebarRight.querySelector('img').style.opacity = '0.5';
+      }
 
-  // Mostra la prima immagine all'avvio
-  showImage(0);
-</script>
+      function updateNavigation() {
+        navigation.innerHTML = '';
+        for (let i = 0; i < images.length; i++) {
+          const bar = document.createElement('div');
+          bar.classList.add('bar');
+          if (i === currentIndex) {
+            bar.classList.add('active');
+            if (i === currentIndex) {
+              bar.classList.add('double');
+            }
+          }
+          navigation.appendChild(bar);
+        }
+      }
+
+      showImage(0);
+    }
+
+    // Inizializzazione dei carousel
+    const images1 = document.querySelectorAll('#carousel1 img');
+    createCarousel(images1, 'carousel1', 'navigation1', 'sidebarLeft1', 'sidebarRight1');
+
+    const images2 = document.querySelectorAll('#carousel2 img');
+    createCarousel(images2, 'carousel2', 'navigation2', 'sidebarLeft2', 'sidebarRight2');
+
+    const images3 = document.querySelectorAll('#carousel3 img');
+    createCarousel(images3, 'carousel3', 'navigation3', 'sidebarLeft3', 'sidebarRight3');
+  </script>
 </body>
+
 </html>
