--- a/prova.html
+++ b/prova.html
@@ -156,7 +156,17 @@
       const sidebarLeft = document.getElementById(sidebarLeftId);
       const sidebarRight = document.getElementById(sidebarRightId);
       let currentIndex = 0;
-
+  
+      carousel.nextImage = function() {
+        currentIndex = (currentIndex + 1) % images.length;
+        showImage(currentIndex);
+      };
+  
+      carousel.prevImage = function() {
+        currentIndex = (currentIndex - 1 + images.length) % images.length;
+        showImage(currentIndex);
+      };
+  
       function showImage(index) {
         images.forEach((image, i) => {
           if (i === index) {
@@ -169,32 +179,18 @@
         updateSidebarImages();
         updateNavigation();
       }
-
-      function nextImage(id) {
-        const carouselId = 'carousel' + id;
-        const images = document.querySelectorAll('#' + carouselId + ' img');
-        currentIndex = (currentIndex + 1) % images.length;
-        showImage(currentIndex);
-      }
-
-      function prevImage(id) {
-        const carouselId = 'carousel' + id;
-        const images = document.querySelectorAll('#' + carouselId + ' img');
-        currentIndex = (currentIndex - 1 + images.length) % images.length;
-        showImage(currentIndex);
-      }
-
+  
       function updateSidebarImages() {
         const leftIndex = (currentIndex - 1 + images.length) % images.length;
         const rightIndex = (currentIndex + 1) % images.length;
-
+  
         sidebarLeft.innerHTML = `<img src="${images[leftIndex].src}" alt="Immagine ${leftIndex + 1}">`;
         sidebarRight.innerHTML = `<img src="${images[rightIndex].src}" alt="Immagine ${rightIndex + 1}">`;
-
+  
         sidebarLeft.querySelector('img').style.opacity = '0.5';
         sidebarRight.querySelector('img').style.opacity = '0.5';
       }
-
+  
       function updateNavigation() {
         navigation.innerHTML = '';
         for (let i = 0; i < images.length; i++) {
@@ -209,20 +205,46 @@
           navigation.appendChild(bar);
         }
       }
-
+  
       showImage(0);
     }
-
+  
     // Inizializzazione dei carousel
     const images1 = document.querySelectorAll('#carousel1 img');
     createCarousel(images1, 'carousel1', 'navigation1', 'sidebarLeft1', 'sidebarRight1');
-
+  
     const images2 = document.querySelectorAll('#carousel2 img');
     createCarousel(images2, 'carousel2', 'navigation2', 'sidebarLeft2', 'sidebarRight2');
-
+  
     const images3 = document.querySelectorAll('#carousel3 img');
     createCarousel(images3, 'carousel3', 'navigation3', 'sidebarLeft3', 'sidebarRight3');
+  
+    // Aggiungiamo gli eventi onclick ai bottoni di navigazione
+    document.getElementById('carousel1').querySelector('.controls button:first-child').onclick = function() {
+      document.getElementById('carousel1').prevImage();
+    };
+  
+    document.getElementById('carousel1').querySelector('.controls button:last-child').onclick = function() {
+      document.getElementById('carousel1').nextImage();
+    };
+  
+    document.getElementById('carousel2').querySelector('.controls button:first-child').onclick = function() {
+      document.getElementById('carousel2').prevImage();
+    };
+  
+    document.getElementById('carousel2').querySelector('.controls button:last-child').onclick = function() {
+      document.getElementById('carousel2').nextImage();
+    };
+  
+    document.getElementById('carousel3').querySelector('.controls button:first-child').onclick = function() {
+      document.getElementById('carousel3').prevImage();
+    };
+  
+    document.getElementById('carousel3').querySelector('.controls button:last-child').onclick = function() {
+      document.getElementById('carousel3').nextImage();
+    };
   </script>
+  
 </body>
 
 </html>
