--- a/index.html
+++ b/index.html
@@ -10,17 +10,22 @@
     <script src="https://cdn.jsdelivr.net/npm/@splidejs/splide@4.1.4/dist/js/splide.min.js"></script>
     <link href="https://cdn.jsdelivr.net/npm/@splidejs/splide@4.1.4/dist/css/splide.min.css"rel="stylesheet">
     <script type="text/javascript" src="https://translate.google.com/translate_a/element.js?cb=googleTranslateElementInit"></script>
-    
 </head>
 
 <body>
 
   <div class="parte-invariata">
       <div class="header">
-        <div class="butn-menu"><input type="checkbox" role="button" aria-label="Display the menu" class="menu"></div>
+        <div class="menu">
+
+
+
+          
+        </div>
         <div class="logo">
           <img class="logo" href="" src="./Assets/Images/logo_whitebg.png">
         </div>
+
         <div class="nav-bar">
             <ul>
                 <a class="elemento-lista" style ="color: #5C6B5F;" href="./">Home<a>
@@ -35,7 +40,6 @@
             <input type="button" value="EN" class="button" id="en"> <input type="button" value="IT" class="button" id="it">
         </div>  
       </div>
-
     <div class="container-immagine">
         <div class="text-image">SPAN</div>
         <div data-translate="Welcome to" data-translateIt="Benvenuto da"  class="sottotitolo-home"></div>
